--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -58,3 +58,28 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - ./db-data/mongo/:/data/db
+
+  # Email testing tool - mailhog/mailhog
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "8025:8025" #HTTP server
+      - "1025:1025" #SMTP server
+
+  mail-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      MAIL_DOMAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_ENCRYPTION: none
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      FROM_NAME: "Ryan Joy"
+      FROM_ADDRESS: ryanjoy@test.com
